--- a/nutype/Cargo.toml
+++ b/nutype/Cargo.toml
@@ -26,6 +26,7 @@ once_cell = "1.0"
 default = ["std"]
 
 std = ["nutype_macros/std"]
+borsh = ["nutype_macros/borsh"]
 serde = ["nutype_macros/serde"]
 regex = ["nutype_macros/regex"]
 schemars08 = ["nutype_macros/schemars08"]
