--- a/test_suite/Cargo.toml
+++ b/test_suite/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 nutype = { path = "../nutype" }
 trybuild = { version = "1.0.71", features = ["diff"] }
 
-borsh = { version = "1.5.3", optional = true }
+borsh = { version = "1.5.3", features = ["derive"], optional = true }
 serde = { version = "1.0.150", optional = true }
 serde_json = { version = "1.0.89", optional = true }
 schemars = { version = "0.8", optional = true }
