--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,12 @@ jobs:
         with:
           command: test
 
+      - name: cargo test --features borsh
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --features borsh
+
       - name: cargo test --features serde
         uses: actions-rs/cargo@v1
         with:
